volexc/tests/ui/parse_missing_semicolon_union.vol
// Missing semicolon in union variant
union Result {
    Ok(u32) = 0
    Err(string) = 1;
}
